--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 
-# Lazy initialization - allows startup without DB
-spring.main.lazy-initialization=${LAZY_INIT:false}
+# Lazy initialization - allows startup without external dependencies
+spring.main.lazy-initialization=${LAZY_INIT:true}
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=${SQL_INIT_MODE:embedded}
 spring.datasource.hikari.initialization-fail-timeout=-1
@@ -41,3 +41,18 @@ rate.limit.login.window=${RATE_LIMIT_LOGIN_WINDOW:60}
 # Admin Account
 admin.email=${ADMIN_EMAIL:admin@example.com}
 admin.password=${ADMIN_PASSWORD:password123}
+
+# Redis Configuration (lazy initialization allows service to start without Redis)
+spring.redis.host=${REDIS_HOST:localhost}
+spring.redis.port=${REDIS_PORT:6379}
+spring.redis.password=${REDIS_PASSWORD:}
+spring.redis.timeout=2000
+spring.redis.connect-timeout=2000
+spring.redis.jedis.pool.max-active=8
+# Enable lazy initialization for Redis connection - fail gracefully if Redis unavailable
+spring.redis.lazy-initialization=true
+spring.redis.jedis.pool.max-idle=8
+spring.redis.jedis.pool.min-idle=0
+
+
+cors.allowed-origins=http://localhost:3000,http://localhost:8080
