--- a/blog-service/src/main/resources/application.properties
+++ b/blog-service/src/main/resources/application.properties
@@ -53,3 +53,5 @@ spring.redis.jedis.pool.min-idle=${SPRING_REDIS_JEDIS_POOL_MIN_IDLE:0}
 spring.redis.jedis.pool.max-wait=-1ms
 spring.cache.redis.time-to-live=3600000
 spring.jpa.open-in-view=false
+
+cors.allowed-origins=http://localhost:3000,http://localhost:8080
